// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders Switch correctly with more props 1`] = `
<div>
  <span
    class="zw-switch--disabled zw-switch--sm"
  >
    <span
      class="zw-switch__inner"
    >
      <span />
    </span>
  </span>
</div>
`;

exports[`Switch renders normal Switch correctly 1`] = `
<div>
  <span
    class="zw-switch"
  >
    <span
      class="za-switch__inner"
    >
      <span />
    </span>
  </span>
</div>
`;
